--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "ext-json": "^1.6",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.3",
         "kalnoy/nestedset": "^4.3",
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.2",
