Removed cashier and dependencies

--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
         "php": "^7.1.3",
         "ext-json": "^1.6",
         "bugsnag/bugsnag-laravel": "^2.0",
+        "cartalyst/stripe-laravel": "^10.0",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
         "kalnoy/nestedset": "^4.3",
-        "laravel/cashier": "^9.2",
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.2",
         "laravel/tinker": "^1.0",
