--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/passport": "^7.2",
         "laravel/tinker": "^1.0",
         "predis/predis": "^1.1",
-        "ramsey/uuid": "^3.8"
+        "ramsey/uuid": "^3.8",
+        "stripe/stripe-php": "^6.32"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
