--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "laravel/framework": "5.8.*",
     "laravel/passport": "^7.2",
     "laravel/tinker": "^1.0",
+    "lorisleiva/laravel-deployer": "^0.2.11",
     "predis/predis": "^1.1",
     "ramsey/uuid": "^3.8",
     "stripe/stripe-php": "^6.32"
