--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,13 @@
     "bugsnag/bugsnag-laravel": "^2.0",
     "cartalyst/stripe-laravel": "^10.0",
     "fideloper/proxy": "^4.0",
+    "graham-campbell/github": "^7.7",
     "kalnoy/nestedset": "^4.3",
     "laravel/framework": "5.8.*",
     "laravel/passport": "^7.2",
     "laravel/tinker": "^1.0",
     "lorisleiva/laravel-deployer": "^0.2.11",
+    "php-http/guzzle6-adapter": "^1.1",
     "predis/predis": "^1.1",
     "ramsey/uuid": "^3.8",
     "stripe/stripe-php": "^6.32"
