feature: added GH credentials to CCI

--- a/.env.ci
+++ b/.env.ci
@@ -16,3 +16,9 @@ STRIPE_KEY=pk_test_Qjzk20i7YC4XwkXWiqi4f0UL003bZmXefX
 STRIPE_SECRET=sk_test_p4nXS8wAw6nQ0Ec4m2yg8aKx00BurzkGSS
 STRIPE_WEBHOOK_SECRET=whsec_hmHMQpETnggUnFK6yAbs63waEfgRG8dx
 STRIPE_WEBHOOK_TOLERANCE=300
+
+GIT_HUB_TEST_TOKEN=85fb53e77253e2d56932bd8f30140ff54aa67754
+GIT_HUB_CLIENT_ID=ef5d06e8adf97164ae27
+GIT_HUB_CLIENT_SECRET=0a6883ee7e0cdeb7e5d8c1d2023ad09fe14bb392
+GIT_HUB_TEST_USER=jfernandez74
+GIT_HUB_TEST_REPO=Jargon-Test-Repo
